// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document-preview component (APP) => Без превью 1`] = `
<div>
  <ufo-rocks_resource-icon
    cls="document-preview document-preview_icon"
    ext="rar"
    mediatype="archive"
    shadow="true"
    size="l"
    type=""
  />
</div>
`;

exports[`document-preview component (APP) => С превью 1`] = `
<div>
  <img
    class="document-preview document-preview_image"
    src="preview-link-for-xlsx&size=500x500"
  />
</div>
`;

exports[`document-preview component (web) => Вирусный файл (с превью и ссылкой на DV) 1`] = `
<lego-components_link
  onclick="function () { [native code] }"
  theme="normal"
>
  <ufo-rocks_resource-icon
    cls="document-preview document-preview_icon"
    ext="epub"
    mediatype="compressed"
    shadow="true"
    size="l"
    type="virus"
  />
</lego-components_link>
`;

exports[`document-preview component (web) => Есть превью 1`] = `
<img
  class="document-preview document-preview_image"
  src="preview-link-for-doc&size=500x500"
/>
`;

exports[`document-preview component (web) => Есть превью и ссылка на DV 1`] = `
<lego-components_link
  onclick="function () { [native code] }"
  theme="normal"
>
  <img
    class="document-preview document-preview_image"
    src="preview-link-for-fb2&size=500x500"
  />
</lego-components_link>
`;

exports[`document-preview component (web) => Нет превью 1`] = `
<ufo-rocks_resource-icon
  cls="document-preview document-preview_icon"
  ext="exe"
  mediatype="executable"
  shadow="true"
  size="l"
  type=""
/>
`;

exports[`document-preview component (web) => Нет превью, но есть ссылка на DV 1`] = `
<lego-components_link
  onclick="function () { [native code] }"
  theme="normal"
>
  <ufo-rocks_resource-icon
    cls="document-preview document-preview_icon"
    ext="zip"
    mediatype="compressed"
    shadow="true"
    size="l"
    type=""
  />
</lego-components_link>
`;
